# Velox

./: .gitignore  BENCHMARKS.md  CLAUDE.md  CLAUDE_SKILLS.md  CRITICAL_FIXES_DETAILED.md  Cargo.toml  Dockerfile  FIXES_APPLIED.md  IMPLEMENTATION_STATUS.md  OBSERVABILITY_README.md  OPTIMIZATION_LOG.md  ORDERBOOK_LIMITATIONS.md  PRODUCTION_READY.md  PROFILING_GUIDE.md  PROFILING_IMPLEMENTATION.md  PROJECT_SUMMARY.md  README.md  SAFETY_AUDIT.md  SHIP_CHECKLIST.md  docker-compose.yml  fly.toml  otel-collector-config.yaml  test-telemetry.sh
benches/: e2e_bench.rs  orderbook_bench.rs  ring_bench.rs  telemetry_overhead.rs
examples/: README.md
grafana/dashboards/: velox-pipeline.json
grafana/provisioning/dashboards/: dashboard.yml
scripts/: profile.sh
skills/: README.md  benchmark_driven_development.md  cache_line_optimization.md  documentation-while-fresh.md  incremental-validation.md  latency_measurement.md  multi-level-testing.md  parallel-subagent-orchestration.md  performance_profiling_rust.md  plan-first-development.md
src/: backoff.rs  bundle.rs  errors.rs  histogram.rs  ingress.rs  lib.rs  main.rs  orderbook.rs  ring.rs  telemetry.rs  tsc.rs  types.rs
tests/: loom_tests.rs  property_tests.rs
