[package]
name = "velox-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
static_assertions = "1.1"
core_affinity = "0.8"
rand = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
loom = "0.7"
proptest = "1.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[[bench]]
name = "ring_bench"
harness = false

[[bench]]
name = "orderbook_bench"
harness = false

[[bench]]
name = "e2e_bench"
harness = false
